static/react-source/src/Views/Main.scss
/* ... */
//-- navbar ---------------------------------------------------

.navbar                 {background-color: #fff !important;
                            box-shadow: $hard-shadow;
                            line-height: 1;
                            padding-top: 0;
                            padding-bottom: 0;
                            padding-right: 0;
                            z-index: 1;
  a.navbar-brand           {text-transform: uppercase;
                            letter-spacing: 2px;
                            color: $danger;
                            transition: 100ms all linear;
                            font-family: 'Amatic SC', cursive;
                            font-weight: normal;
                            font-size: 3rem;
    &:hover                {color: lighten($danger, 10%);
                            transition: 100ms all linear;
    }
  }
  small                    {display: none;
  }
  a                        {color: #aaa;
      &.dropdown-toggle    {
          &:after          {display: none;}
      }
  }
  .navbar-toggle span      {background-color: #aaa;
  }
  .navbar-nav              {height: 4rem;
                            line-height: 3rem;
    >span                  {line-height: 4rem;
                            padding-right: 1em;
    }
    >a.nav-link                     {
        &:hover,
        &:active,
        &:focus,
        &.open             {color: $white;
                            background-color: lighten($accent2, 20%);
      }
      .dropdown-menu       {top: -2px;
                            background-color: lighten($accent2, 20%);
                            border: 1px solid lighten($accent2, 10%);
        li                 {
            &.divider {background-color: lighten($accent2, 10%);
                             margin: 0;
                  }
                  a         {color: $white;
                             line-height: 3em;
                             height: 3em;
                             padding-top: 0;
                             padding-bottom: 0;
                      &:hover,
                      &:active    {background-color: lighten($accent2, 10%);
                      }
                  }
              }
          }
      }
      &.welcome-nav         {color: darken($pallette1, 50%);
      }
  }
  .badge-wrapper         {height: 100%;
                          line-height: 100%;
                          float: right;
                          position: relative;
                          display: block;
      #unread-counter    {border-radius: 0;
                          color: $pallette3;
                          height: 100%;
                          line-height: 100%;
                          padding: 19px;
                          background-color: lighten($pallette3, 40%);
                          transition: all .3s ease-in-out;
          &:hover        {background-color: lighten($pallette3, 45%);
                          columns: darken($pallette3, 10%);
                          transition: all .5s ease-in-out;
          }
      }
  }
}

//-- tools --------------------------------------------------

.tools-component           {position: fixed;
                            right: -5.5rem;
                            top: 5rem;
                            z-index: 30;
                            box-shadow: 0 4px 2px rgba(0,0,0,0.3);
                            border-radius: $border-radius 0 0 $border-radius;
    &:hover                {right: 0;
                            transition: all 300ms;
    }
    .btn                   {text-align: left;
                            border-radius: $border-radius 0 0 $border-radius;
                            padding-left: .25rem;
    }
}

.panel-body                {position: fixed;
                            width: 80vw;
                            height: 100%;
                            right: 0;
                            top: -1rem;
                            z-index: 20;
                            background-color: $white;
                            box-shadow: 0 4px 2px rgba(0,0,0,0.3);
                            border-radius: $border-radius 0 0 $border-radius;
                            padding: 2rem;
                            padding-right: 0;

    &.panel-body-enter,
    &.panel-body-appear        {//right: -80%;
                                transform: translate3d(180vw, 0, 0);
    }
    &.panel-body-enter-done,
    &.panel-body-appear-done   {//right: 0;
                                transform: translate3d(0, 0, 0);
                                transition: all 500ms;
    }
    &.panel-body-exit          {//opacity: 1;
                                //right: 0;
                                transform: translate3d(0, 0, 0);
    }
    &.panel-body-exit-done,
    &.panel-body-exit-active   {//opacity: 0;
                                //right: -80%;
                                transform: translate3d(180vw, 0, 0);
                                transition: all 500ms;
    }

    @media (max-width: map-get($grid-breakpoints, md))
                               {width: 100vw;
    }
    @media (min-width: map-get($grid-breakpoints, lg))
                               {width: 60vw;
    }

}
/* ... */

